Prevent overlaps in the font menus
This includes the 'x' and the 'v' buttons overlapping the font name, and the
font name wrapping to the next line in both the current font view and the view
inside the menus.

--- a/css/fonts-customizer.css
+++ b/css/fonts-customizer.css
@@ -44,14 +44,15 @@ h3.jetpack-fonts__type-header {
 	cursor: pointer;
 	border-radius: 0 3px 3px 0;
 	color: #6A6A6A;
+  background-color: #fff;
 	font-size: 24px;
 	width: 28px;
 	height: 45px;
 	line-height: 45px;
 	text-align: center;
 	position: absolute;
-	right: 4px;
-	top: 4px;
+	right: 1px;
+	top: 1px;
 	text-indent: -1px;
 }
 
@@ -177,6 +178,7 @@ h3.jetpack-fonts__type-header {
 	font-size: 28px;
 	line-height: 45px;
 	padding-left: 10px;
+  overflow: hidden;
 }
 
 #font-select .jetpack-fonts__option {
@@ -195,6 +197,7 @@ h3.jetpack-fonts__type-header {
 .jetpack-fonts__default-button {
 	cursor: pointer;
 	border-radius: 0 3px 3px 0;
+  background-color: #fff;
 	color: #555;
 	font-size: 24px;
 	width: 28px;
